<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ip_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IP_label" />

            <EditText
                android:id="@+id/ip_addr_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints="Enter server IP address"
                android:ems="10"
                android:inputType="number|text"
                android:text="@string/IP"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/process_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/processnumber_label" />

            <EditText
                android:id="@+id/process_num_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints="Enter the number of process"
                android:ems="10"
                android:inputType="number"
                android:text="@string/processnumber"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/port_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_label" />

            <EditText
                android:id="@+id/port_num_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints="Enter port number"
                android:ems="10"
                android:inputType="number"
                android:text="@string/port"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/compress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/compress_label" />

            <RadioGroup
                android:id="@+id/compress_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/compression_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/compress_true" />

                <RadioButton
                    android:id="@+id/compression_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/compress_false" />
            </RadioGroup>

        </TableRow>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/connect"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:background="#000000"
            android:text="@string/console"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

</LinearLayout>